// review/review.proto

syntax = "proto3";

package review;

// import "google/protobuf/wrappers/wrapper.proto";
import "google/protobuf/wrappers.proto";


// The review service definition.
service ReviewService {
  // Create a review
  rpc CreateReview (ReviewSchema) returns (ReviewSchema) {}
  // Get a review by id
  rpc GetReview (ReviewRequest) returns (ReviewSchema) {}
  // Update a review by id
  rpc UpdateReview (ReviewRequest) returns (ReviewSchema) {}
  // Delete a review by id
  rpc DeleteReview (ReviewRequest) returns (google.protobuf.StringValue) {}
  // GetReviews gets a list of reviews by start and count
  rpc GetReviews (ReviewsRequest) returns (ReviewsResponse) {}
}

// ReviewRequest
message ReviewRequest {
  int32 id = 1;
  ReviewSchema review = 2;
}

// The review interface schema
message ReviewSchema {
  int32 id = 1;
  int32 rating = 2;
  string review = 3;
  int32 customer_id = 4;
  int32 product_id = 5;
}

// ReviewsRequest describes a request to get count reviews starting at id start
message ReviewsRequest {
  int32 count = 1;
  int32 start = 2;
}

// ReviewsResponse is a list of reviews
message ReviewsResponse {
  repeated ReviewSchema reviews = 1;
}
